fixed column stacking on small screens

--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 20px; }
+  padding: 20px 0 0 20px; }
 
 .app {
   max-width: 400px; }
